gcc/tree-ssa-alias.h
@@ -118,12 +118,12 @@ extern bool stmt_kills_ref_p (gimple *, tree);
 extern bool stmt_kills_ref_p (gimple *, ao_ref *);
 extern tree get_continuation_for_phi (gimple *, ao_ref *,
 				      unsigned int *, bitmap *, bool,
-				      void *(*)(ao_ref *, tree, void *, bool),
+				      void *(*)(ao_ref *, tree, void *, bool *),
 				      void *);
 extern void *walk_non_aliased_vuses (ao_ref *, tree,
 				     void *(*)(ao_ref *, tree,
 					       unsigned int, void *),
-				     void *(*)(ao_ref *, tree, void *, bool),
+				     void *(*)(ao_ref *, tree, void *, bool *),
 				     tree (*)(tree),
 				     void *);
 extern unsigned int walk_aliased_vdefs (ao_ref *, tree,
